<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.StartActivity">

    <TextView
        android:id="@+id/start_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/start_info_tv"
        android:text="Catch delicious food\nbefore it goes to waste."
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="5dp"
        app:layout_constraintStart_toStartOf="@id/start_logo_tv"
        app:layout_constraintTop_toBottomOf="@+id/start_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_login_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_info_tv"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_signUp_bt"
        android:background="@drawable/button_border"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_login_bt"/>

    <View
        app:layout_constraintStart_toStartOf="@id/login_signUp_bt"
        app:layout_constraintTop_toTopOf="@+id/login_or_tv"
        app:layout_constraintBottom_toBottomOf="@+id/login_or_tv"
        app:layout_constraintEnd_toStartOf="@+id/login_or_tv"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        android:layout_width="0dp"
        android:layout_height="2dp"/>

    <TextView
        android:id="@+id/login_or_tv"
        android:text="Or"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_signUp_bt"
        app:layout_constraintStart_toStartOf="@+id/login_signUp_bt"
        app:layout_constraintEnd_toEndOf="@+id/login_signUp_bt"/>

    <View
        app:layout_constraintStart_toEndOf="@+id/login_or_tv"
        app:layout_constraintTop_toTopOf="@+id/login_or_tv"
        app:layout_constraintBottom_toBottomOf="@+id/login_or_tv"
        app:layout_constraintEnd_toEndOf="@+id/login_signUp_bt"
        android:layout_marginStart="15dp"
        android:background="@color/gray"
        android:layout_width="0dp"
        android:layout_height="2dp"/>



    <LinearLayout
        android:id="@+id/login_loginIcons_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/login_or_tv"
        app:layout_constraintStart_toStartOf="@+id/login_or_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_or_tv">

        <ImageButton
            android:id="@+id/login_naver_bt"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/naver" />

        <ImageButton
            android:id="@+id/login_kakao_bt"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/kakako" />

        <ImageButton
            android:id="@+id/login_google_bt"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/google" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/login_loginIcons_linear"
        app:layout_constraintStart_toStartOf="@+id/login_loginIcons_linear"
        app:layout_constraintEnd_toEndOf="@+id/login_loginIcons_linear"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_findID_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_findID_et"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:text="ㅣ"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_findPassword_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_findPassword_et"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>