<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login.LoginActivity">


            <TextView
                android:id="@+id/login_title2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_tl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/login_title2_tv"
                app:layout_constraintTop_toBottomOf="@+id/login_title2_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_tl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/login_email_tl"
                app:layout_constraintStart_toStartOf="@+id/login_email_tl"
                app:layout_constraintTop_toBottomOf="@+id/login_email_tl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/login_loginStyle_lienar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/login_password_tl"
        app:layout_constraintTop_toBottomOf="@+id/login_password_tl">

        <ImageView
            android:id="@+id/login_autoLogin_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/circle" />

        <TextView
            android:id="@+id/login_autoLogin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="자동 로그인"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/login_saveID_ib"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:scaleType="centerInside"
            android:src="@drawable/circle" />

        <TextView
            android:id="@+id/login_saveID_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="아이디 저장"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_login_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password_tl"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password_tl"
        app:layout_constraintTop_toBottomOf="@+id/login_loginStyle_lienar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_signUp_bt"
        android:background="@drawable/button_border"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password_tl"
        app:layout_constraintStart_toStartOf="@+id/login_password_tl"
        app:layout_constraintTop_toBottomOf="@+id/login_login_bt" />

    <View
        app:layout_constraintStart_toStartOf="@id/login_signUp_bt"
        app:layout_constraintTop_toTopOf="@+id/login_or_tv"
        app:layout_constraintBottom_toBottomOf="@+id/login_or_tv"
        app:layout_constraintEnd_toStartOf="@+id/login_or_tv"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        android:layout_width="0dp"
        android:layout_height="2dp"/>

    <TextView
        android:id="@+id/login_or_tv"
        android:text="Or"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_signUp_bt"
        app:layout_constraintStart_toStartOf="@+id/login_signUp_bt"
        app:layout_constraintEnd_toEndOf="@+id/login_signUp_bt"/>

    <View
        app:layout_constraintStart_toEndOf="@+id/login_or_tv"
        app:layout_constraintTop_toTopOf="@+id/login_or_tv"
        app:layout_constraintBottom_toBottomOf="@+id/login_or_tv"
        app:layout_constraintEnd_toEndOf="@+id/login_signUp_bt"
        android:layout_marginStart="15dp"
        android:background="@color/gray"
        android:layout_width="0dp"
        android:layout_height="2dp"/>



            <LinearLayout
                android:id="@+id/login_loginIcons_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/login_or_tv"
                app:layout_constraintStart_toStartOf="@+id/login_or_tv"
                app:layout_constraintTop_toBottomOf="@+id/login_or_tv">

                <ImageButton
                    android:id="@+id/login_naver_bt"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/naver" />

                <ImageButton
                    android:id="@+id/login_kakao_bt"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/kakako" />

                <ImageButton
                    android:id="@+id/login_google_bt"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/google" />
            </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/login_loginIcons_linear"
        app:layout_constraintStart_toStartOf="@+id/login_loginIcons_linear"
        app:layout_constraintEnd_toEndOf="@+id/login_loginIcons_linear"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_findID_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_findID_et"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:text="ㅣ"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_findPassword_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_findPassword_et"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>